project page video updates

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background: lightgray;
 }
 
 .content {
@@ -43,12 +44,12 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgb(239, 237, 237);
-  color: white;
+  background-color: rgb(159, 158, 158);
   text-align: center;
   margin-top: auto;
   color: black;
   font-family: 'Courier New', Courier, monospace;
+  border-top: black solid 3px;
 }
 
 
